schemars/tests/ui/invalid_validation_attrs.stderr
error: expected validate regex attribute to be a string: `regex = "..."`
 --> $DIR/invalid_validation_attrs.rs:4:39
  |
4 | pub struct Struct1(#[validate(regex = 0, foo, length(min = 1, equal = 2, bar))] String);
  |                                       ^

error: unknown schemars attribute `foo`
 --> $DIR/invalid_validation_attrs.rs:7:42
  |
7 | pub struct Struct2(#[schemars(regex = 0, foo, length(min = 1, equal = 2, bar))] String);
  |                                          ^^^

error: expected schemars regex attribute to be a string: `regex = "..."`
 --> $DIR/invalid_validation_attrs.rs:7:39
  |
7 | pub struct Struct2(#[schemars(regex = 0, foo, length(min = 1, equal = 2, bar))] String);
  |                                       ^

error: schemars attribute cannot contain both `equal` and `min`
 --> $DIR/invalid_validation_attrs.rs:7:63
  |
7 | pub struct Struct2(#[schemars(regex = 0, foo, length(min = 1, equal = 2, bar))] String);
  |                                                               ^^^^^^^^^

error: unknown item in schemars length attribute
 --> $DIR/invalid_validation_attrs.rs:7:74
  |
7 | pub struct Struct2(#[schemars(regex = 0, foo, length(min = 1, equal = 2, bar))] String);
  |                                                                          ^^^
